# Dielectric

./: CMakeLists.txt  Description  ED_Par.cpp  ED_Par.h  Get_Matrix.cpp  Get_Matrix.h  K.cpp  K.h  Num_Par.cpp  Num_Par.h  R.cpp  R.h  block.cpp  block.h  common_type.cpp  common_type.h  common_type_triangle.cpp  common_type_triangle.h  e0.cpp  e0.h  element_geom.cpp  element_geom.h  epr_lib.cpp  epr_lib.h  f_par.cpp  f_par.h  get_area.cpp  get_area.h  get_b.cpp  get_b.h  get_einc.cpp  get_einc.h  get_epr.cpp  get_epr.h  get_field.cpp  get_field.h  get_field_one_point.cpp  get_field_one_point.h  get_hinc.cpp  get_hinc.h  (+14 more)
data/: description  ed_param.txt  grid.gr  num_param.txt
my_results/: body.gr  ed_params_res.txt  epr_h.txt  epr_v.txt  field_H_abs.gdr  field_H_image.gv  field_H_real.gv  field_V_abs.gdr  field_V_image.gv  field_V_real.gv  j_H_E_image.gv  j_H_E_real.gv  j_H_M_image.gv  j_H_M_real.gv  j_V_E_image.gv  j_V_E_real.gv  j_V_M_image.gv  j_V_M_real.gv  prnFile.txt
